k8/deployments/iisvm/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: iis-vm
  namespace: demo-vm-ossm
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    vm.kubevirt.io/name: win2k22-iis
