k8/deployments/iisvm/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: iis-app
  namespace: demo-vm-ossm
spec:
  to:
    kind: Service
    name: iis-vm
    weight: 100
  port:
    targetPort: identity
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
